# machine-learning-challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: auth.py  main.py  schemas.py
models/: .gitignore
src/: config.py  main.py
src/predict/: evaluator.py  predictor.py
src/process/: data_loader.py  data_sources.py  preprocessor.py
src/train/: trainer.py
