[project]
name = "machine-learning-challenge"
version = "0.1.0"
description = "Property price prediction pipeline and API"
readme = "README.md"
authors = [
    {  name = "Nicole Sarvasi", email = "nicolesarvasi@hotmail.com"}
]
requires-python = ">=3.11,<3.12"
dependencies = [
  "pandas==2.3.1",
  "numpy==2.3.2",
  "scikit-learn==1.7.1",
  "category_encoders==2.8.1",
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
  "pydantic==2.11.7",
  "joblib==1.5.1",
  "requests==2.32.4",
]

[project.optional-dependencies]
sql = ["sqlalchemy", "psycopg2-binary"]
mysql = ["sqlalchemy", "pymysql"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "app"]
